--- a/app/views/layouts/backbone.haml
+++ b/app/views/layouts/backbone.haml
@@ -4,6 +4,7 @@
     %meta{ :charset => "UTF-8" }
     %meta{ :'http-equiv' => "X-UA-Compatible", :content => "IE=edge" }
     = csrf_meta_tag
+    = session_meta_tag
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
     %title= "Teambox"
     = include_stylesheets :application, :media => :screen
