--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -11,6 +11,10 @@ $sidebar_bkg: #e6edf5
 $column_width: 190px 
 $aux_width: 200px
 
+//Marcos vars for Teambox 3.2 GUI
+$brd_gray: 1px solid #a0a0a0
+
+
 // fix for IE7, http://flipc.blogspot.com/2009/02/damn-ie7-and-inline-block.html
 =inline-block($height)
   display: inline-block
