Reneabling progress bars which are needed for uploads. @marcosmedinia please fix.

--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -31,7 +31,7 @@
 @import calendar_date_select
 @import autocomplete
 @import facebox
-//@import progress_bars
+@import progress_bars
 @import tooltips
 @import preview
 @import hoverable
