--- a/public/mockup/styles/_typography.sass
+++ b/public/mockup/styles/_typography.sass
@@ -44,6 +44,10 @@ textarea.placeholder, input.placeholder
   color: lighten($text, 30%) !important
 
 .textilized
+  display: block
+  float: left
+  clear: none
+  width: 550px
   font-size: 12px
   color: #010101
   overflow-y: hidden
