--- a/public/mockup/styles/_users.sass
+++ b/public/mockup/styles/_users.sass
@@ -275,10 +275,14 @@ a.thumb_avatar
   +rounded(5px)
 
 a.micro_avatar
+  border: 1px solid $clr_gray_50
+  margin: 5px 10px 8px 8px
+  padding: 0
   float: left
   width: $micro_size
   height: $micro_size
-  margin-right: 10px
+  +rounded(2px)
+  //margin-right: 10px
 
 .card
   font-size: 12px
