--- a/public/mockup/styles/_comments.sass
+++ b/public/mockup/styles/_comments.sass
@@ -17,7 +17,8 @@ form.new_comment, form.edit_comment
   padding-bottom: 3px
   margin-bottom: 30px
   .micro_avatar
-    +rounded(3px)
+    border: 1px solid $clr_gray_50
+    +rounded(2px)
     position: absolute
     top: 1px
     left: 0
@@ -151,11 +152,13 @@ form .upload_area
         width: 538px
 
 .comment
+  &:hover
+    background-color: $clr_gray_05
   padding: 5px 0
   min-height: 24px
   position: relative
-  border:
-    bottom: 2px solid white
+  background: url(img_3_2/sprite_h.png) -380px bottom no-repeat
+//separador aqui
   p.actions
     visibility: hidden
     position: relative
@@ -170,9 +173,10 @@ form .upload_area
       text-align: right
   .info
     position: relative
-    top: 5px
-    left: 5px
+    top: 10px
+    left: 8px
     .micro_avatar
+      border: 1px solid red
       +rounded(3px)
   span.hours
     font-size: 11px
