--- a/public/mockup/styles/_overlays.sass
+++ b/public/mockup/styles/_overlays.sass
@@ -2,6 +2,7 @@
   display: inline-block
   position: relative
   font-size: 12px
+  margin-bottom: 5px
   .overlay
     position: absolute
     top: -11px
