--- a/app/templates/partials/comment_form.jade.erb
+++ b/app/templates/partials/comment_form.jade.erb
@@ -5,7 +5,7 @@ input(name= 'utf8', type= 'hidden', value= '✓')
 .field.text_area
   a.micro_avatar.my_avatar
   .textarea
-    textarea(cols= '40', name= type + '[comments_attributes][0][body]', placeholder= '<%= t('comments.new.task') %>', rows= '20', autocomplete= 'off')
+    textarea(cols= '40', name='comments_attributes[0][body]', placeholder= '<%= t('comments.new.task') %>', rows= '20', autocomplete= 'off')
     .autocomplete(style= 'display: none')
 
 .extra(style= 'display: none')
@@ -13,7 +13,7 @@ input(name= 'utf8', type= 'hidden', value= '✓')
     .field.text_field.hours_field(style= 'display: none')
       label
         | <%= t('comments.hours.hours') %>
-        input(class= 'human_hours', name= type + '[comments_attributes][0][human_hours]', size= '30', type= 'text')
+        input(class= 'human_hours', name= 'comments_attributes[0][human_hours]', size= '30', type= 'text')
       a(href= 'http://help.teambox.com/faqs/advanced-features/time-tracking', target= '_blank') <%= t('projects.fields.new.time_tracking_docs')%>.
 
   .actions
@@ -23,7 +23,7 @@ input(name= 'utf8', type= 'hidden', value= '✓')
       .google_docs_attachment
         a(href= '/google_docs', rel= 'facebox')
           img(alt= 'Icon_6_document', class= 'google_docs_logo', src= '/images/google_docs/icon_6_document.gif')
-        .google_docs_attachment_form_area(data-object-name= type + '[comments_attributes][0]')
+        .google_docs_attachment_form_area(data-object-name= 'comments_attributes[0]')
           .fields
           ul.file_list
 
@@ -35,15 +35,15 @@ input(name= 'utf8', type= 'hidden', value= '✓')
     - if (self.is_task)
       .task_actions
         label(for= 'task_status') <%= t('activerecord.attributes.task.status') %>
-        select#task_status(name= type + '[status]')
+        select#task_status(name= 'status')
 
         label(for= 'task_assigned_id') <%= t('comments.new.assigned_to') %>
-        select#task_assigned_id(name= type + '[assigned_id]')
+        select#task_assigned_id(name= 'assigned_id')
 
         label(for= 'task_due_on') <%= t('activerecord.attributes.task.due_on') %>
         .date_picker
           img(alt= 'Calendar', class= 'calendar_date_select_popup_icon', src= '/images/calendar_date_select/calendar.gif')
-          input(id= 'task_due_on', name= type + '[due_on]', type= 'hidden')
+          input(id= 'task_due_on', name= 'due_on', type= 'hidden')
           span(class= 'localized_date')
             i <%= t('date_picker.no_date_assigned') %>
     - else
