--- a/app/templates/search/results.jade.erb
+++ b/app/templates/search/results.jade.erb
@@ -7,4 +7,4 @@ p <%= t('search.found_results', :length => '{{length}}')%>
       a(href= result.project.project_url)= result.project.name
       | &rarr;
       a(href= result.url)= result.name
-      span.time= self.time_ago(result.updated_at)
+      span.time= self.timeAgo(result.updated_at)
