--- a/app/templates/partials/thread.jade.erb
+++ b/app/templates/partials/thread.jade.erb
@@ -10,15 +10,15 @@
   .block
     .thread_title
       - if (self.is_task)
-        a(href= self.task_url)= self.name + ' on'
+        a(href= self.task_url(self, self.project))= self.name + ' on'
 
         - if (self.task_list && self.project)
           a(href= self.task_list_url(self.task_list, self.project))= self.name + ' task list'
       - else
-        a(href= self.conversation_url)= self.name + ' conversation'
+        a(href= self.conversation_url(self, self.project))= self.name + ' conversation'
 
     .project_overlay
-      a(href= self.project.project_url, data-project-id= self.project.id)= self.project.name
+      a(href= self.project_url(self.project), data-project-id= self.project.id)= self.project.name
 
     - if (self.is_task)
       .task_summary
